--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "pypy3.5"
+# TODO why was pandas (seeming to) fail to install on their server with this
+# version? fix?
+#  - "pypy3.5"
 install:
   - pip install .
   - pip install -r test_requirements.txt
-# TODO is just listing multiple python versions above sufficent to get this to
-# run with all of them?
 script: pytest
